# paris-tree

./: .gitignore  README.md  pyproject.toml  test.py
dashboard/: dashboard.md
notebooks/: analysis_exploratory.ipynb  decision.MD  predict_remarquable.ipynb  treat_transform.ipynb
treat_api/: process.md
treat_api/consts/: __init__.py  defaults.py
treat_api/data_classes/: __init__.py  coordinates.py  quest.py  treater.py  tree.py
treat_api/quests_factory/: maps.py
