[tool.poetry]
name = "treat-api"
version = "0.1.0"
description = ""
authors = ["hugo-andriamaromanana <hugo-andriamaromanana>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
googlemaps = "^4.10.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
